[project]
name = "assessmenttunas"
version = "0.1.0"
description = "Assessment Tunas"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "babel>=2.16.0",
    "decorator>=5.1.1",
    "docutils>=0.21.2",
    "idna>=3.10",
    "jinja2>=3.1.4",
    "lxml-html-clean>=0.3.1",
    "lxml==4.6.5",
    "num2words>=0.5.13",
    "passlib>=1.7.4",
    "pillow>=10.4.0",
    "polib>=1.2.0",
    "psutil>=6.0.0",
    "psycopg2>=2.9.9",
    "pypdf2==1.26.0",
    "python-dateutil>=2.9.0.post0",
    "python-ldap==3.1.0",
    "pytz>=2024.2",
    "reportlab>=4.2.5",
    "requests>=2.32.3",
    "setuptools>=75.1.0",
    "werkzeug==2.0.2",
]
